# camwatch

./: .env.example  .gitignore  BABYSITTER.md  CLAUDE.md  HANDOVER.md  MIGRATION_TO_NVIDIA_GPU.md  README.md  babysitter-check.md  car_make_model_enrichment.md  pts_timing_investigation.md  pyproject.toml
alerting/: camwatch-engine-alerts.yaml
camwatch/: __init__.py  __main__.py  backfill.py  calibrate.py  capture.py  capture_worker.py  config.py  crossing.py  daylight.py  db.py  detect.py  digit_matcher.py  grid_crossing.py  homography.py  main.py  metrics.py  metrics_push.py  preview.py  recorder.py  reprocess_clips.py  retention_sweep.py  server.py  sink.py  speed.py  thumb_upgrader.py  ts_reader.py  uploader.py
camwatch/static/: style.css
camwatch/templates/: _heatmap.html  _histogram.html  _metrics_panel.html  _pass_list.html  _pass_row.html  _status.html  _status_badge.html  index.html
camwatch_enricher/: __init__.py  __main__.py  config.py  decision.py  embedder.py  index.py  server.py  store.py
config/: calibration.example.yaml  config.example.yaml  enricher.yaml  homography.scene_v0.yaml  homography.yaml  marked_points.yaml
config/cx410w_archive/: calibration.yaml
dashboards/: camwatch-engine.json
docs/: SHARING_TALK.md
scripts/: build_embedding_index.py  build_homography_from_marks.py  calibrate_enricher.py  calibrate_homography.py  calibrate_homography_combined.py  calibrate_homography_to_truth.py  camwatch-tick.sh  camwatch_log_rotate.sh  collect_digit_templates.py  com.lei.camwatch-logrotate.plist  compare_local_vs_opus.py  deploy.sh  enrich_apply.py  fit_distortion_from_scene.py  inspect_homography.py  mark_points.py  mark_rectangle.py  methodA_methodC.py  probe_main_gaps.py  probe_main_iter_cost.py  regen_thumbs.py  render_homography_grid.py  render_homography_overlay.py  render_homography_v2.py  render_visual_grid.py  scan_digit_seconds.py  test_anchor_subsets.py  test_stream.py  timing_probe.py  verify_homography.py  verify_speed.py  verify_test_passes.py
systemd/: camwatch-retention-sweep.service  camwatch-retention-sweep.timer
tests/: test_media_verify.py  test_metrics_push.py  test_pts_stamp.py  test_registry_adoption.py  test_retention_sweep.py  test_speed_guards.py  test_upload_dead_letter.py
