[project]
name = "camwatch"
version = "0.1.0"
description = "Local traffic speed monitor — Reolink RTSP + YOLO + two-line crossing speed estimation"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ultralytics>=8.3.0",
    "lap>=0.5.12",
    "opencv-python>=4.10.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "pytesseract>=0.3.13",
    "av>=17.0.1",
    # httpx for the capture_worker's POST to camwatch-enricher. Other DL
    # deps (torch, torchvision, pillow) used to live here when the
    # enricher was in-process; they now live in the camwatch-enricher
    # repo. Ultralytics still pulls torch transitively for YOLO.
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["camwatch"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
