[project]
name = "camwatch"
version = "0.1.0"
description = "Local traffic speed monitor — Reolink RTSP + YOLO + two-line crossing speed estimation"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ultralytics>=8.3.0",
    "lap>=0.5.12",
    "opencv-python>=4.10.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "pytesseract>=0.3.13",
    "av>=17.0.1",
    # httpx for the capture_worker's POST to camwatch-enricher. Other DL
    # deps (torch, torchvision, pillow) used to live here when the
    # enricher was in-process; they now live in the camwatch-enricher
    # repo. Ultralytics still pulls torch transitively for YOLO.
    "httpx>=0.27",
    # astral computes sunrise/sunset so the capture worker skips the
    # local enricher call for non-daylight passes (those go straight to
    # the Opus workflow). The enricher applies its own daylight filter
    # to the index for defense-in-depth.
    "astral>=3.2",
    # Shared camera facts (homography + K/D, measured cadence, RTSP/FTP
    # access templates) come from the private camwatch-cameras registry
    # (ADR-015). The repo is private because profiles carry placement and
    # LAN details — never vendor a profile into this (public) repo.
    "camwatch-cameras",
    # torch/torchvision are ultralytics' runtime, declared directly so the
    # per-platform index pin below applies (uv sources only cover direct
    # dependencies). See the pytorch-cu121 note at [tool.uv.sources].
    "torch",
    "torchvision",
]

# Sibling checkout for now (lei-ubuntu: ~/github/camwatch-cameras next to
# ~/github/camwatch). Switch to a pinned git rev — the ADR-015 ceremony —
# once the registry repo's main is pushed:
#   camwatch-cameras = { git = "ssh://git@github.com/leochen4891/camwatch-cameras", rev = "<pin>" }
[tool.uv.sources]
camwatch-cameras = { path = "../camwatch-cameras" }
# Production (lei-ubuntu) runs NVIDIA driver 535 (CUDA 12.2 max): PyPI's
# default torch builds (cu13x) import fine but report cuda.is_available()
# = False, silently pushing YOLO onto CPU. Pin Linux to the cu121 wheel
# index — the pairing proven in production (torch 2.5.1+cu121). Bump only
# together with a driver upgrade. macOS dev boxes keep PyPI torch.
torch = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["camwatch"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
